--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ jobs:
       docker_layer_caching: true
     steps:
       - checkout
+      - run: ./create-version-file.sh
       - run: ./docker-build.sh
 
 workflows:
