--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,11 @@ jobs:
     steps:
       - checkout
       - run: ./create-version-file.sh
-      # - run: ./docker-build.sh
+      - run: ./docker-build.sh
       - run: npm install
       - run: npm run compose
       - run: npm test
+      - run: npm test # this is intentional
       - run: ./.circleci/release-to-staging.sh
 
 workflows:
