--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "compose": "VERSION=$(cat .version) docker-compose up -d",
-    "test": "jest --testTimeout 60000 ./javascript/"
+    "test": "jest --forceExit --testTimeout 60000 ./javascript/"
   },
   "repository": {
     "type": "git",
