--- a/package.json
+++ b/package.json
@@ -21,20 +21,30 @@
   },
   "homepage": "https://github.com/orbs-network/signer-service#readme",
   "dependencies": {
+    "@ethereumjs/common": "^2.6.0",
+    "@ethereumjs/tx": "^3.4.0",
     "node-fetch": "^2.6.0",
     "orbs-client-sdk": "^2.5.0"
   },
   "devDependencies": {
     "@orbs-network/orbs-ethereum-contracts-v2": "0.0.12",
+    "ganache-cli": "^6.12.2",
     "jest": "^26.0.1",
     "web3": "1.2.6"
   },
   "jest": {
     "verbose": true,
-    "extraGlobals": ["Math"],
+    "extraGlobals": [
+      "Math"
+    ],
     "rootDir": ".",
     "testEnvironment": "node",
-    "moduleFileExtensions": ["js", "json"]
+    "moduleFileExtensions": [
+      "js",
+      "json"
+    ]
   },
-  "files": ["javascript/**/*"]
+  "files": [
+    "javascript/**/*"
+  ]
 }
